modify for simple connection and exception extends